# orpheus-vlg

./: .gitignore  .gitmodules  .svlint.toml  README.md  meson.build  meson_options.txt
.github/workflows/: build-lint-test.yml
src/: mod_7seg.sv  mod_attenuator.sv  mod_clock.sv  mod_fixed_mul.sv  mod_sine16.sv  mod_sinesource.sv  mod_sum2.sv  mod_synth.sv  orpheus_engine.sv  orpheus_sine16.sv  orpheus_sine16.verilog  orpheus_sine_source.sv
subprojects/: asciichart.wrap  gnuplot-iostream.wrap  orpheus.wrap
test/: model_tester.hpp  test_mod_attenuator.cpp  test_mod_sine16.cpp  test_mod_sinesource.cpp  test_mod_synth.cpp  test_sine16.cpp  test_utils.hpp
